# simple-search

./: CMakeLists.txt  README.md
blockchain/: blockchain_interface.cpp  blockchain_interface.h
database/: db_interface.cpp  db_interface.h
enterprise/enterprise/: AbstractScreen.qml  BoardManager.qml  CreateDeal.qml  CustomizeButton.qml  CustomizeLabel.qml  DealItem.qml  DealManger.qml  Login.qml  Register.qml  Setting.qml  accountmanager.cpp  accountmanager.h  blockchainWorkerThread.cpp  blockchainWorkerThread.h  config.cpp  config.h  dealmanager.cpp  dealmanager.h  enterprise.pro  internaldb.cpp  internaldb.h  keymanager.cpp  keymanager.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_controller.cpp  mainwindow_controller.h  qml.qrc  zmq_manager.cpp  zmq_manager.h
enterprise/enterprise/keystore/: public_key.key  secret_key.key
file_server/: CMakeLists.txt
file_server/inc/: db_interface.h  message.h  message_crypto.h  message_handler.h  zhelpers.hpp  zmq_listener.h
file_server/src/: db_interface.cpp  main.cpp  message.cpp  message_crypto.cpp  message_handler.cpp  zmq_listener.cpp
file_server/tools/: CMakeLists.txt
file_server/tools/dump_client/: CMakeLists.txt
file_server/tools/dump_client/src/: main.cpp
file_server/tools/keygen/: CMakeLists.txt
file_server/tools/keygen/src/: main.cpp
message/: message.cpp  message.h
src/file_server/: zmq_listener.cpp  zmq_listener.h
utils/: utils.cpp  utils.h
